[package]
name = "quickwit-index-management"
version = "0.3.1"
authors = ["Quickwit, Inc. <hello@quickwit.io>"]
edition = "2021"
license = "AGPL-3.0-or-later" # For a commercial, license, contact hello@quickwit.io
description = "Quickwit index management"
repository = "https://github.com/quickwit-oss/quickwit"
homepage = "https://quickwit.io/"
documentation = "https://quickwit.io/docs/"

[dependencies]
anyhow = "1"
async-trait = "0.1"
chitchat = "0.4"
flume = "0.10"
futures = "0.3"
itertools = "0.10.3"
http = "0.2"
once_cell = "1"
quickwit-actors = { version = "0.3.1", path = "../quickwit-actors" }
quickwit-cluster = { version = "0.3.1", path = "../quickwit-cluster" }
quickwit-common = { version = "0.3.1", path = "../quickwit-common" }
quickwit-config = { version = "0.3.1", path = "../quickwit-config" }
quickwit-doc-mapper = { version = "0.3.1", path = "../quickwit-doc-mapper" }
quickwit-metastore = { version = "0.3.1", path = "../quickwit-metastore" }
quickwit-proto = { version = "0.3.0", path = "../quickwit-proto" }
quickwit-storage = { version = "0.3.0", path = "../quickwit-storage" }
serde = "1"
serde_json = "1"
serde_yaml = "0.8"
thiserror = "1"
time = { version = "0.3.9", features = ["std"] }
tokio = { version = "1", features = ["sync"] }
tokio-stream = "0.1"
tower = "0.4.13"
tracing = "0.1.29"

[dev-dependencies]
quickwit-metastore = { version = "0.3.1", path = "../quickwit-metastore", features = [
  "testsuite"
] }
mockall = "0.11.2"

