[package]
name = 'quickwit-index'
version = '0.1.0'
authors = ['Quickwit, Inc. <hello@quickwit.io>']
edition = '2018'
license = 'AGPL-3.0-or-later'  # For a commercial, license, contact hello@quickwit.io
description = "Crate containing all of the custom tantivy Directory used in quickwit"
repository = "https://github.com/quickwit-inc/quickwit"
homepage = "https://quickwit.io/"
documentation = "https://quickwit.io/docs/"


[dependencies]
futures = "0.3"
tantivy = { git= "https://github.com/quickwit-inc/tantivy", rev="c1d1d84"}
quickwit-storage = { version = "0.1.0", path = "../quickwit-storage" }
ulid = "0.4"
once_cell = "1"
tokio = { version = "1", features = ["sync"] }
tracing = "0.1"
anyhow = "1"
async-trait = "0.1"
quickwit-actors = {path = "../quickwit-actors" }
quickwit-metastore = {path = "../quickwit-metastore" }
quickwit-index-config = {path = "../quickwit-index-config" }
quickwit-directories = {path = "../quickwit-directories"}
tempfile = "3.2"
flume = "0.10"
serde = "1"
serde_json = "1"

[dev-dependencies]
quickwit-metastore = {path = "../quickwit-metastore", features=["testsuite"]}
mockall = "0.9"
