[package]
name = 'quickwit-indexing'
version = '0.1.0'
authors = ['Quickwit, Inc. <hello@quickwit.io>']
edition = '2021'
license = 'AGPL-3.0-or-later'  # For a commercial, license, contact hello@quickwit.io
description = "Quickwit indexing"
repository = "https://github.com/quickwit-inc/quickwit"
homepage = "https://quickwit.io/"
documentation = "https://quickwit.io/docs/"

[dependencies]
anyhow = "1"
async-trait = "0.1"
backoff = { version = "0.4", features = ["tokio"] }
byte-unit = { version = "4", default-features = false, features = ["serde"] }
fail = "0.5"
flume = "0.10"
futures = "0.3"
itertools = "0.10.3"
once_cell = "1"
quickwit-actors = {path = "../quickwit-actors" }
quickwit-common = {path = "../quickwit-common" }
quickwit-config = {path = "../quickwit-config" }
quickwit-directories = {path = "../quickwit-directories"}
quickwit-doc-mapper = {path = "../quickwit-doc-mapper", features=["testsuite"]}
quickwit-metastore = {path = "../quickwit-metastore" }
quickwit-storage = { version = "0.1.0", path = "../quickwit-storage" }
rdkafka = { version = "0.28", default-features = false, features = ["tokio", "libz", "ssl", "cmake-build"], optional = true }
openssl = { version = "0.10.36", default-features = false, optional = true}
libz-sys = {version = "1.1.3", optional = true}
rusoto_core = { version = "0.47", default-features = false, features = ["rustls"], optional = true }
rusoto_kinesis = { version = "0.47", default-features = false, features = ["rustls"], optional = true }
serde = "1"
serde_json = "1"
serde_yaml = "0.8"
tantivy = { git= "https://github.com/quickwit-inc/tantivy", rev="48c47f0d3", default-features=false, features = ["mmap", "lz4-compression"] }
tempfile = "3.2"
thiserror = "1"
tokio = { version = "1", features = ["sync"] }
tracing = "0.1.29"
ulid = "0.5"
tokio-stream = "0.1"
arc-swap = "1.4"

[features]
kafka = ["rdkafka"]
kafka-broker-external-service = []
vendored-kafka = ["kafka", "libz-sys/static", "openssl/vendored"]
kinesis = ["rusoto_core", "rusoto_kinesis"]
kinesis-external-service = []

[dev-dependencies]
bytes = "1"
mockall = "0.11"
proptest = "1"
quickwit-common = {path="../quickwit-common", version="0.1"}
quickwit-metastore = {path = "../quickwit-metastore", features=["testsuite"]}
quickwit-storage = {path = "../quickwit-storage", features=["testsuite"]}
rand = '0.8'
tempfile = "3"

[[test]]
name = "failpoints"
path = "failpoints/mod.rs"
required-features = ["fail/failpoints"]
