[package]
name = "quickwit-ingest-api"
version = "0.3.1"
edition = "2021"
license = "AGPL-3.0-or-later" # For a commercial, license, contact hello@quickwit.io
description = "Quickwit is a cost-efficient search engine."

[dependencies]
anyhow = "1"
async-trait = "0.1"
flume = "0.10"
futures = "0.3.17"
once_cell = "1"
quickwit-actors = { version = "0.3.1", path = "../quickwit-actors" }
quickwit-metastore = { version = "0.3.1", path = "../quickwit-metastore" }
quickwit-proto = { version = "0.3.1", path = "../quickwit-proto" }
rocksdb = { version = "0.18", features = [], default-features = false }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"

[dev-dependencies]
rand = "0.8"
rand_distr = "0.4"
tempfile = "3"
