[package]
name = "quickwit-metastore"
version = "0.1.0"
authors = ['Quickwit, Inc. <hello@quickwit.io>']
edition = "2021"
license = "AGPL-3.0-or-later" # For a commercial, license, contact hello@quickwit.io
description = "Quickwit's metastore"
repository = "https://github.com/quickwit-inc/quickwit"
homepage = "https://quickwit.io/"
documentation = "https://quickwit.io/docs/"


[dependencies]
anyhow = "1.0"
async-trait = "0.1"
byte-unit = { version = "4", default-features = false, features = ["serde"] }
chrono = "0.4"
diesel = { version = "1.4", features = ["postgres", "chrono", "extras"], optional = true }
diesel_migrations =  { version = "1.4", optional = true }
futures = "0.3.17"
itertools = "0.10.3"
once_cell = "1"
openssl = { version = "0.10.36", optional = true }
regex = "1"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.6", features = ["full"]}
tracing = "0.1.29"

quickwit-common = { version = "0.1.0", path = "../quickwit-common" }
quickwit-config = { version = "0.1.0", path = "../quickwit-config" }
quickwit-doc-mapper = { version = "0.1.0", path = "../quickwit-doc-mapper" }
quickwit-storage = { version = "0.1.0", path = "../quickwit-storage" }

[dependencies.mockall]
version = "0.11"
optional = true

[dependencies.tempfile]
version = "3"
optional = true

[dev-dependencies]
dotenv = "0.15"
mockall = "0.11"
quickwit-storage = { version = "0.1.0", path = "../quickwit-storage", features=["testsuite"]}
quickwit-doc-mapper = { version = "0.1.0", path = "../quickwit-doc-mapper", features=["testsuite"] }
tempfile = '3'
futures = '0.3'
rand = "0.8"
md5 = "0.7"

[features]
testsuite = ["mockall", "tempfile"]
ci-test = []
postgres = [ "diesel", "diesel_migrations", "openssl"]
