[package]
name = "quickwit-metastore"
version = "0.3.1"
authors = ["Quickwit, Inc. <hello@quickwit.io>"]
edition = "2021"
license = "AGPL-3.0-or-later" # For a commercial, license, contact hello@quickwit.io
description = "Quickwit's metastore"
repository = "https://github.com/quickwit-oss/quickwit"
homepage = "https://quickwit.io/"
documentation = "https://quickwit.io/docs/"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
byte-unit = { version = "4", default-features = false, features = ["serde"] }
# chrono = { version = "0.4" }
# diesel = { version = "1.4", features = [
#   "postgres",
#   "chrono",
#   "extras"
# ], optional = true }
# diesel_migrations = { version = "1.4", optional = true }
sqlx = {version = "0.5", features = ["runtime-tokio-rustls", "postgres", "migrate", "time"], optional=true}
futures = "0.3.17"
itertools = "0.10.3"
mockall = { version = "0.11", optional = true }
once_cell = "1"
# openssl = { version = "0.10.36", optional = true }
quickwit-common = { version = "0.3.1", path = "../quickwit-common" }
quickwit-config = { version = "0.3.1", path = "../quickwit-config" }
quickwit-doc-mapper = { version = "0.3.1", path = "../quickwit-doc-mapper" }
quickwit-storage = { version = "0.3.1", path = "../quickwit-storage" }

regex = "1"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
tempfile = { version = "3", optional = true }
thiserror = "1.0"
time = { version = "0.3.9", features = ["std"] }
tokio = { version = "1.19", features = ["full"] }
tracing = "0.1.29"

[dev-dependencies]
dotenv = "0.15"
futures = "0.3"
md5 = "0.7"
mockall = "0.11"
quickwit-doc-mapper = { version = "0.3.1", path = "../quickwit-doc-mapper", features = [
  "testsuite"
] }
# quickwit-storage = { version = "0.3.1", path = "../quickwit-storage", features = [
#   "testsuite"
# ] }
rand = "0.8"
# tempfile = "3"
tracing-subscriber = "0.3"

[features]
testsuite = ["mockall", "tempfile"]
ci-test = []
postgres = [ "sqlx" ]
