[package]
name = "quickwit-proto"
version = "0.3.1"
authors = ["Quickwit, Inc. <hello@quickwit.io>"]
edition = "2021"
license = "AGPL-3.0-or-later" # For a commercial, license, contact hello@quickwit.io
description = "Quickwit's protos"
repository = "https://github.com/quickwit-oss/quickwit"
homepage = "https://quickwit.io/"
documentation = "https://quickwit.io/docs/"

[dependencies]
prost = { version = "0.11.0", default-features = false, features = [
  "prost-derive"
] }
serde = { version = "1.0", features = ["derive"] }
tonic = "0.8"

[build-dependencies]
prost-build = "0.11.0"
tonic-build = "0.8.0"
