[package]
name = 'quickwit-search'
version = "0.2.1"
authors = ['Quickwit, Inc. <hello@quickwit.io>']
edition = '2021'
license = "AGPL-3.0-or-later" # For a commercial, license, contact hello@quickwit.io
description = "Quickwit's search logic"
repository = "https://github.com/quickwit-oss/quickwit"
homepage = "https://quickwit.io/"
documentation = "https://quickwit.io/docs/"


[dependencies]
anyhow = '1'
async-trait = "0.1"
base64 = '0.13'
futures = '0.3'
http = "0.2"
mockall = "0.11"
itertools = '0.10'
thiserror = "1"
tokio-stream = "0.1"
tracing = "0.1.29"
tracing-futures = "0.2.5"
serde_json = "1"
serde = { version = "1.0", features = ["derive"] }
hyper = { version = "0.14", features = ["stream", "server", "http1", "http2", "tcp", "client"] }
bytes = "1"
quickwit-common = { version = "0.2.1", path = "../quickwit-common" }
quickwit-config = { version = "0.2.1", path = "../quickwit-config" }
lru = "0.7"
once_cell = "1"
opentelemetry = "0.17"
tracing-opentelemetry = "0.17"
rayon = "1"
tantivy = { git= "https://github.com/quickwit-oss/tantivy", rev="7f45a6a", default-features=false, features = ["mmap", "lz4-compression", "quickwit"] }

[dependencies.quickwit-cluster]
path = '../quickwit-cluster'

[dependencies.quickwit-doc-mapper]
path = '../quickwit-doc-mapper'

[dependencies.tokio]
version = '1'
features = ['full']

[dependencies.tokio-util]
version = '0.7'
features = ['full']

[dependencies.quickwit-directories]
path = '../quickwit-directories'

[dependencies.quickwit-proto]
path = '../quickwit-proto'

[dependencies.quickwit-metastore]
path = '../quickwit-metastore'

[dependencies.quickwit-storage]
path = '../quickwit-storage'

[dev-dependencies]
quickwit-proto = { version = "0.2.1", path = "../quickwit-proto" }
quickwit-indexing = { version = "0.2.1", path = "../quickwit-indexing" }
quickwit-metastore = { version = "0.2.1", path = "../quickwit-metastore", features = ["testsuite"] }
serde_json = "1"
assert-json-diff = "2"
tempfile = "3.3"
