[package]
name = "quickwit-search"
version = "0.3.1"
authors = ["Quickwit, Inc. <hello@quickwit.io>"]
edition = "2021"
license = "AGPL-3.0-or-later" # For a commercial, license, contact hello@quickwit.io
description = "Quickwit's search logic"
repository = "https://github.com/quickwit-oss/quickwit"
homepage = "https://quickwit.io/"
documentation = "https://quickwit.io/docs/"

[dependencies]
anyhow = "1"
async-trait = "0.1"
base64 = "0.13"
bytes = "1"
futures = "0.3"
http = "0.2"
hyper = { version = "0.14", features = [
  "stream",
  "server",
  "http1",
  "http2",
  "tcp",
  "client"
] }
itertools = "0.10"
lru = "0.7"
mockall = "0.11"
once_cell = "1"
opentelemetry = "0.17"
quickwit-cluster = { version = "0.3.1", path = "../quickwit-cluster" }
quickwit-common = { version = "0.3.1", path = "../quickwit-common" }
quickwit-config = { version = "0.3.1", path = "../quickwit-config" }
quickwit-directories = { version = "0.3.1", path = "../quickwit-directories" }
quickwit-doc-mapper = { version = "0.3.1", path = "../quickwit-doc-mapper" }
quickwit-metastore = { version = "0.3.1", path = "../quickwit-metastore" }
quickwit-proto = { version = "0.3.1", path = "../quickwit-proto" }
quickwit-storage = { version = "0.3.1", path = "../quickwit-storage" }
rayon = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
tantivy = { git = "https://github.com/quickwit-oss/tantivy/", rev = "d24f31f", default-features = false, features = [
  "mmap",
  "lz4-compression",
  "zstd-compression",
  "quickwit"
] }
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["full"] }
tracing = "0.1.29"
tracing-futures = "0.2.5"
tracing-opentelemetry = "0.17"

[dev-dependencies]
assert-json-diff = "2"
chitchat = "0.4"
quickwit-indexing = { version = "0.3.1", path = "../quickwit-indexing" }
quickwit-metastore = { version = "0.3.1", path = "../quickwit-metastore", features = [
  "testsuite"
] }
serde_json = "1"
tempfile = "3.3"
