[package]
name = "quickwit-serve"
version = "0.3.1"
authors = ["Quickwit, Inc. <hello@quickwit.io>"]
edition = "2021"
license = "AGPL-3.0-or-later" # For a commercial, license, contact hello@quickwit.io
description = "Quickwit's search service"
repository = "https://github.com/quickwit-oss/quickwit"
homepage = "https://quickwit.io/"
documentation = "https://quickwit.io/docs/"

[dependencies]
anyhow = "1"
async-trait = "0.1"
bytes = "1"
futures = "0.3"
futures-util = { version = "0.3.1", default-features = false }
hyper = { version = "0.14", features = [
  "client",
  "http1",
  "http2",
  "server",
  "stream",
  "tcp",
] }
mime_guess = { version = "2.0.4" }
once_cell = "1"
opentelemetry = "0.17"
quickwit-actors = { version = "0.3.1", path = "../quickwit-actors" }
quickwit-cluster = { version = "0.3.1", path = "../quickwit-cluster" }
quickwit-common = { version = "0.3.1", path = "../quickwit-common" }
quickwit-config = { version = "0.3.1", path = "../quickwit-config" }
quickwit-core = { version = "0.3.1", path = "../quickwit-core" }
quickwit-directories = { version = "0.3.1", path = "../quickwit-directories" }
quickwit-doc-mapper = { version = "0.3.1", path = "../quickwit-doc-mapper" }
quickwit-indexing = { version = "0.3.1", path = "../quickwit-indexing" }
quickwit-ingest-api = { version = "0.3.1", path = "../quickwit-ingest-api" }
quickwit-metastore = { version = "0.3.1", path = "../quickwit-metastore" }
quickwit-proto = { version = "0.3.1", path = "../quickwit-proto" }
quickwit-search = { version = "0.3.1", path = "../quickwit-search" }
quickwit-storage = { version = "0.3.1", path = "../quickwit-storage" }
quickwit-telemetry = { version = "0.3.1", path = "../quickwit-telemetry" }
regex = "1"
rust-embed = "6.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
serde_qs = { version = "0.10", features = ["warp"] }
termcolor = "1"
thiserror = "1"
tokio = { version = "1.20", features = ["full"] }
tokio-stream = "0.1"
tracing = "0.1.29"
tracing-opentelemetry = "0.17"
warp = "0.3"

[dev-dependencies]
assert-json-diff = "2.0.1"
mockall = "0.11"
quickwit-metastore = { version = "0.3.1", path = "../quickwit-metastore", features = [
  "testsuite"
] }
quickwit-storage = { version = "0.3.1", path = "../quickwit-storage", features = [
  "testsuite"
] }
rand = "0.8"
tokio = { version = "1", features = ["full"] }
