[package]
name = "quickwit-storage"
version = "0.3.1"
authors = ["Quickwit, Inc. <hello@quickwit.io>"]
edition = "2021"
license = "AGPL-3.0-or-later" # For a commercial, license, contact hello@quickwit.io
description = "Quickwit's storage abstraction"
repository = "https://github.com/quickwit-oss/quickwit"
homepage = "https://quickwit.io/"
documentation = "https://quickwit.io/docs/"

[dependencies]
anyhow = "1"
async-trait = "0.1"
base64 = "0.13"
bytes = "1"
ec2_instance_metadata = "0.3"
fnv = "1.0.7"
futures = "0.3"
lru = "0.7"
md5 = "0.7"
mockall = { version = "0.11", optional = true }
once_cell = "1"
quickwit-aws = { version = "0.3.1", path = "../quickwit-aws" }
quickwit-common = { version = "0.3.1", path = "../quickwit-common" }
quickwit-config = { version = "0.3.1", path = "../quickwit-config" }
rand = "0.8"
regex = "1"
rusoto_core = { version = "0.48", default-features = false, features = [
  "rustls"
] }
rusoto_s3 = { version = "0.48", default-features = false, features = [
  "rustls"
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
tantivy = { git = "https://github.com/quickwit-oss/tantivy/", rev = "d24f31f", default-features = false, features = [
  "mmap",
  "lz4-compression",
  "zstd-compression",
  "quickwit"
] }
tempfile = "3"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["full"] }
tracing = "0.1.29"

[dev-dependencies]
mockall = "0.11"
tracing-subscriber = "0.3"
tokio = { version = "1", features = ["full", "test-util"] }

[features]
testsuite = ["mockall"]
ci-test = []
