[package]
name = "quickwit-storage"
version = "0.3.1"
authors = ["Quickwit, Inc. <hello@quickwit.io>"]
edition = "2021"
license = "AGPL-3.0-or-later" # For a commercial, license, contact hello@quickwit.io
description = "Quickwit's storage abstraction"
repository = "https://github.com/quickwit-oss/quickwit"
homepage = "https://quickwit.io/"
documentation = "https://quickwit.io/docs/"

[dependencies]
anyhow = "1"
async-trait = "0.1"
base64 = "0.13"
bytes = "1"
fnv = "1.0.7"
futures = "0.3"
lru = "0.7"
md5 = "0.7"
mockall = { version = "0.11", optional = true }
once_cell = "1"
quickwit-aws = { version = "0.3.1", path = "../quickwit-aws" }
quickwit-common = { version = "0.3.1", path = "../quickwit-common" }
quickwit-config = { version = "0.3.1", path = "../quickwit-config" }
rand = "0.8"
regex = "1"
rusoto_core = { version = "0.48", default-features = false, features = [
  "rustls"
] }
rusoto_s3 = { version = "0.48", default-features = false, features = [
  "rustls"
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
tantivy = { git = "https://github.com/quickwit-oss/tantivy/", rev = "8e773ad", default-features = false, features = [
  "mmap",
  "lz4-compression",
  "zstd-compression",
  "quickwit"
] }
tempfile = "3"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["full"] }
tracing = "0.1.29"
tokio-stream = "0.1"
# Temporary: till small our small fixes are published on crates.io.
azure_core = { git = "https://github.com/Azure/azure-sdk-for-rust", rev = "a001d10", optional = true }
azure_storage = { git = "https://github.com/Azure/azure-sdk-for-rust", rev = "a001d10", optional = true }
azure_storage_blobs = { git = "https://github.com/Azure/azure-sdk-for-rust", rev = "a001d10", optional = true}


[dev-dependencies]
mockall = "0.11"
tracing-subscriber = "0.3"
tokio = { version = "1", features = ["full", "test-util"] }

[features]
testsuite = [
  "mockall",
  "azure",
  "azure_core/azurite_workaround",
  "azure_storage/azurite_workaround",
  "azure_storage_blobs/azurite_workaround"
]
ci-test = []
azure = ["azure_core", "azure_storage", "azure_storage_blobs"]
