[package]
name = "quickwit-telemetry"
version = "0.1.0"
authors = ["Quickwit <hello@quickwit.io>"]
edition = "2018"

[dependencies]
once_cell = "1.8.0"
reqwest = { version = "0.11", default-features=false, features = ["json", "rustls-tls"] }
tokio = {version = "1", features = ["full"]}
anyhow = "1"
serde = {version="1", features = ["derive"]}
uuid = { version= "0.8", features = ["v4", "serde"]}
tracing = "0.1"
async-trait = "0.1"
hostname = "0.3"
username = "0.2"
md5 = "0.7"
